# Vision-bridge

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: release.yml
docs/: 2026-05-22-vision-bridge-design.md
docs/plans/: 2026-05-25-vision-bridge-mvp-plan.md  2026-06-03-vision-bridge-skill-cli.md
docs/specs/: 2026-05-22-vision-bridge-design.md  2026-05-25-vision-bridge-mvp-design.md  2026-06-03-vision-bridge-skill-cli-design.md
src/: main.rs
src/commands/: init.rs  mod.rs  start.rs  stop.rs
src/server/: handler.rs  mod.rs
src/utils/: inject_js.rs  mod.rs  shell.rs
templates/: inject.js
tests/: integration_test.rs
