[package]
name = "vision-bridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vbri"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
